<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAppBar"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Dashboard"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <!-- FIRST COLUMN-->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/layoutProcessing"
                        android:layout_width="150dp"
                        android:layout_height="140dp"
                        android:layout_gravity="end"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/rounded_button">

                        <ImageView
                            android:id="@+id/Processing"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="30dp"
                            android:background="@drawable/process_192"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/Processing"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:text="@string/dfw_processing"
                            android:textColor="@color/colorWhite"
                            android:textSize="11sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/layoutReadyForProduction"
                        android:layout_width="150dp"
                        android:layout_height="140dp"
                        android:layout_gravity="right"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/rounded_button">

                        <ImageView
                            android:id="@+id/imgReadyForProduction"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="29dp"
                            android:background="@drawable/production_192"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/imgReadyForProduction"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:text="@string/dfw_ready_for_production"
                            android:textColor="@color/colorWhite"
                            android:textSize="11sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/layoutShipped"
                        android:layout_width="150dp"
                        android:layout_height="140dp"
                        android:layout_gravity="right"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/rounded_button">

                        <ImageView
                            android:id="@+id/imgShipped"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="30dp"
                            android:background="@drawable/shipped_192"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/imgShipped"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:text="@string/dfw_shipped"
                            android:textColor="@color/colorWhite"
                            android:textSize="11sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <!--<RelativeLayout
                        android:id="@+id/layoutReadyForPickup"
                        android:layout_width="150dp"
                        android:layout_height="140dp"
                        android:layout_gravity="right"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/rounded_button"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/imgReadyForPickup"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="30dp"
                            android:background="@drawable/pickup_192"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/imgReadyForPickup"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:text="@string/dfw_ready_for_pickup"
                            android:textColor="@color/colorWhite"
                            android:textSize="11sp"
                            android:textStyle="bold" />
                    </RelativeLayout>-->

                </LinearLayout>
                <!-- SECOND COLUMN -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/layoutCheckProof"
                        android:layout_width="150dp"
                        android:layout_height="140dp"
                        android:layout_gravity="left"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/rounded_button">

                        <ImageView
                            android:id="@+id/imgCheckProof"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="30dp"
                            android:background="@drawable/sms_192"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/imgCheckProof"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:text="@string/dfw_check_proof"
                            android:textColor="@color/colorWhite"
                            android:textSize="11sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/layoutReadyForPickup"
                        android:layout_width="150dp"
                        android:layout_height="140dp"
                        android:layout_gravity="left"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/rounded_button">

                        <ImageView
                            android:id="@+id/imgReadyForPickup"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="30dp"
                            android:background="@drawable/pickup_192"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/imgReadyForPickup"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:text="@string/dfw_ready_for_pickup"
                            android:textColor="@color/colorWhite"
                            android:textSize="11sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/layoutThankYou"
                        android:layout_width="150dp"
                        android:layout_height="140dp"
                        android:layout_gravity="start"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/rounded_button">

                        <ImageView
                            android:id="@+id/imgThankYou"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="30dp"
                            android:background="@drawable/thank_192"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/imgThankYou"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:text="@string/dfw_thank_you"
                            android:textColor="@color/colorWhite"
                            android:textSize="11sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>

        <!--inearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_button">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/imgProcessing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:background="@mipmap/ic_launcher"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imgProcessing"
                        android:layout_centerHorizontal="true"

                        android:text="@string/dfw_processing"
                        android:textColor="@color/colorWhite" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_button">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/imgCheckProof"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:background="@mipmap/ic_launcher"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imgCheckProof"
                        android:layout_centerHorizontal="true"

                        android:text="@string/dfw_check_proof"
                        android:textColor="@color/colorWhite" />
                </RelativeLayout>
            </LinearLayout>

            &lt;!&ndash;<Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@drawable/rounded_button"
                android:padding="50dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="50"
                android:background="@drawable/rounded_button"
                android:padding="50dp" />&ndash;&gt;

        </LinearLayout>-->

        <!-- <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:columnCount="2"
             android:orientation="horizontal"
             android:rowCount="3">

             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">

                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/rounded_button"
                     android:padding="37dp" />

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/dfw_processing"
                     android:textAlignment="center"
                     android:textStyle="bold" />
             </LinearLayout>


             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">

                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/rounded_button"
                     android:padding="37dp" />

                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/dfw_check_proof"
                     android:textAlignment="center"
                     android:textStyle="bold" />
             </LinearLayout>
         </GridLayout>-->


    </ScrollView>
</LinearLayout>